Refocus after feedback

--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -121,43 +121,34 @@
 
   <body>
     <div class="container-xl" id="hero">
-      <div class="row g-3">
-        <div class="image-container">
-          <img src="static/img/ProductRow.avif" class="img-fluid img-banner">
-        </div>
-      </div>
       <div class="row row-cols-1 row-cols-md-2 g-3">
-        <div class="col-md-6 col-lg-4">
-          <div class="card bl-card h-100">
-            <div class="card-header text-center">Premium Creamed Raw Honey</div>
+        <div class="col-md-6 col-lg-7">
+          <img class="img-fluid img-center h-100" src="static/img/ProductRow.avif" alt="Golden Latte">
+        </div>
+        <div class="col-md-6 col-lg-5">
+          <div class="card card h-100">
             <div class="card-body">
-              <p class="card-text">
-                Unfiltered and unheated honey is enriched with gourmet spices and nutrient-rich freeze-dried fruits.
-                Each batch is hand-crafted using a proprietary process that yields
-                a velvety-smooth, spreadable product with bold natural flavor
-                and real nutrition.
+              <h5 class="card-title text-center">Creamed Pure Wyoming Honey</h5>
+              <p class="card-text">Our honey is harvested from hives in Wyoming, a state
+                known for its clean air and abundant wildflowers. We are beekeepers and
+                work closely with local beekeepers who share our commitment to
+                sustainable, ethical practices. Each batch is hand-crafted using a process
+                that yields a velvety-smooth product while preserving all the natural
+                antioxidants, enzymes, and nutritional benefits.
               </p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-8">
-          <div class="card tg-card h-100">
-            <div class="card-body">
-
-              <a href="products.html#TG" class="text-decoration-none">
-                <img class="card-img-top" src="static/img/GoldenLatte.avif" alt="Golden Latte">
-              </a>
-              <div class="overlay-text-ul">
-                <h2>Golden Milk</h2>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-      <div class="row row-cols-2 g-3">
+      <div class="row row-cols-1 row-cols-md-3 g-3">
         <div class="col">
           <a href="products.html#TG" class="text-decoration-none">
-            <img src="static/img/Toast.avif" class="img-fluid img-center">
+            <img class="img-fluid img-center h-100" src="static/img/GoldenLatte.avif" alt="Golden Latte">
+          </a>
+        </div>
+        <div class="col">
+          <a href="products.html#TG" class="text-decoration-none">
+            <img src="static/img/Toast.avif" class="img-fluid img-center h-100">
           </a>
         </div>
         <div class="col">
@@ -166,17 +157,32 @@
           </a>
         </div>
       </div>
-
-      <div class="row g-3">
-        <div class="image-container">
-          <img src="static/img/Colorful%20hives.jpg" class="img-fluid img-banner">
-          <div class="overlay-text-ll">
-            <h2>Apiary & Farm to Table</h2>
+      <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="col-md-6 col-lg-7">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title text-center">Whole Natural Ingredients</h5>
+              <p class="card-text">We carefully select spices and fruits from suppliers
+                that share our commitment to bring you the highest quality pure natural foods.
+                We use organic, single-origin, and fair-trade ingredients wherever we can.
+                There are no extracts or refined ingredients in any of our blends. Just the
+                flavor and nutrition from the honey, spices and whole fruits.
+              </p>
+            </div>
           </div>
+        </div>
+        <div class="col-md-6 col-lg-5">
+          <img src="static/img/Purple-flower-bee-pano2.jpg" class="img-fluid img-center h-100">
         </div>
       </div>
 
-      <div class="row row-cols-2 g-3">
+      <div class="row row-cols-1 row-cols-md-3 g-3">
+        <div class="image-container">
+          <img class="img-fluid img-center" src="static/img/QueensofGoodnessHoneyFrame.avif">
+          <div class="overlay-text-ll">
+            <h2>Our Apiary</h2>
+          </div>
+        </div>
         <div class="col">
           <div class="image-container">
             <img src="static/img/5.jpg" class="img-fluid img-center">
@@ -194,20 +200,6 @@
           </div>
         </div>
       </div>
-
-      <div class="row g-3">
-        <div class="image-container">
-          <img src="static/img/Purple-flower-bee-pano2.jpg" class="img-fluid img-banner">
-          <div class="overlay-text-ll">
-            <h2>Indulge in Nature's Finest Blends</h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <h2 class="bolder text-center"><i></i></h2>
-      </div>
-
 
       <div class="row row-cols-2 row-cols-md-3 row-cols-xl-6 g-3">
         <div class="col img-hover">
