--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -130,8 +130,9 @@
         </div>
       </div>
       <div class="row row-cols-1 row-cols-md-2 g-3">
-        <div class="col-md-6 order-md-1">
-          <div class="card bl-card h-100">
+        <div class="col">
+          <div class="card tg-card h-100">
+            <div class="card-header text-center">Premium Creamed Honey</div>
             <div class="card-body">
               <ul class="card-text">
                 <li>Unfiltered and unheated Wyoming honey</li>
@@ -141,11 +142,27 @@
                 <li>Bold natural flavor and real nutrition</li>
               </ul>
             </div>
+            <br>
+            <img class="img-center" height="200" src="static/img/1.jpg" alt="Bees on honeycomb">
           </div>
         </div>
-        <div class="col-md-6 order-md-2">
-          <div class="card tg-card h-100">
-            <img class="card-img-top" src="static/img/1.jpg" alt="Bees on honeycomb">
+        <div class="col">
+          <div class="card bl-card h-100">
+            <div class="card-header text-center">Serving Suggestions</div>
+            <div class="card-body">
+              <h4 class="card-text">Drink Ideas</h4>
+              <ul>
+                <li><b>Golden Milk</b> - simply swirl a teaspoon or two into your favorite warm milk</li>
+                <li>Stir into coffee, tea or hot water</li>
+                <li>Make an all-natural, honey-sweetened simple syrup for mocktails and cocktails</li>
+              </ul>
+              <h4>Food Ideas</h4>
+              <ul>
+                <li>Spread on biscuits, bagels, toast, English muffins or waffles</li>
+                <li>Savor a spoonful or use as a delicious icing</li>
+                <li>Pair with apples, cheese, pretzels, yogurt or oatmeal</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
