--- a/queensofgoodness/about.html
+++ b/queensofgoodness/about.html
@@ -129,20 +129,8 @@
           </div>
         </div>
       </div>
-      <div class="row g-1">
-        <div class="card bl-card">
-          <div class="card-body">
-            <h5>We source raw unfiltered honey directly from trusted local beekeepers
-              and enrich it with gourmet spices and nutrient-rich freeze-dried fruits.
-              Each batch is hand-crafted using a proprietary week-long crystallization
-              and blending process that yields a velvety-smooth, spreadable product
-              with bold natural flavor and real nutrition.
-            </h5>
-          </div>
-        </div>
-      </div>
       <div class="row row-cols-1 row-cols-lg-2 g-3">
-        <div class="col">
+        <div class="col-md-6 col-lg-7">
           <div class="card h-100">
             <div class="card-header text-center">Our Story</div>
             <video class="card-video-top" controls poster="static/img/SinksHives.jpg">
@@ -150,7 +138,7 @@
             </video>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-6 col-lg-5">
           <div class="card h-100">
             <div class="card-header text-center">How We Started</div>
             <div class="card-body">
@@ -166,41 +154,8 @@
           </div>
         </div>
       </div>
-      <div class="row row-cols-2 g-3">
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-header text-center">Our Honey</div>
-            <img class="card-img-top" src="static/img/QueensofGoodnessHoneyFrame.avif">
-            <div class="card-body">
-              <h5 class="card-title text-center">Raw Local Honey</h5>
-              <p class="card-text">All of our honey is
-                harvested from hives in Wyoming, a state known for its clean air and abundant
-                wildflowers. We work closely with local beekeepers who share our commitment to
-                sustainable, ethical practices. Each jar of creamed raw honey is carefully
-                hand-crafted to preserve its natural enzymes, antioxidants, and health benefits.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-header text-center">Our Blends</div>
-            <img class="card-img-top" src="static/img/ProductStack.avif">
-            <div class="card-body">
-              <h5 class="card-title text-center">Whole Natural Ingredients</h5>
-              <p class="card-text">We carefully select spices and fruits from suppliers
-                that share our commitment to bring you the highest quality pure natural foods.
-                We use organic, single-origin, and fair-trade ingredients wherever we can.
-                There are no extracts or refined ingredients in any of our blends. Just the
-                flavor and nutrition from the honey, whole fruits and spices so that it is
-                naturally delicious.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="row row-cols-1 row-cols-md-2 g-3">
-        <div class="col">
+        <div class="col-md-6 col-lg-7">
           <div class="card h-100">
             <div class="card-header text-center">Our Mission</div>
             <img class="card-img-top" src="static/img/AOW.jpeg" alt="Academy of the Winds">
@@ -215,7 +170,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-6 col-lg-5">
           <div class="card h-100">
             <div class="card-header text-center">Support Pollinators</div>
             <div class="card-body">
