--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -274,6 +274,16 @@
             <div class="card-body text-center">
               <table class="logo-table">
                 <tr>
+                  <tr>
+                    <td>
+                      <a href="https://www.facebook.com/p/Blue-and-White-Tea-Co-LLC-61582355155487/" target="_blank" rel="noopener noreferrer">
+                        <img src="static/img/BlueandWhite-02.avif" class="img-fluid" width=40%>
+                      </a>
+                    </td>
+                    <td>
+                      325 Main St, Lander, WY
+                    </td>
+                  </tr>
                   <td>
                     <a href="https://www.mountain-fresh-produce.com/" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/MountainFresh.webp" class="img-fluid" width=40%>
@@ -311,16 +321,6 @@
             <div class="card-header text-center">Shop & On-line Orders</div>
             <div class="card-body text-center">
               <table class="logo-table">
-                <tr>
-                  <td>
-                    <a href="https://windriveroutpost.com/collections/home-decor/products/queens-of-goodness-honey" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/wind-river-outpost.png" class="img-fluid" width=60%>
-                    </a>
-                  </td>
-                  <td>
-                    320 Main St, Lander, WY
-                  </td>
-                </tr>
                 <tr>
                   <td>
                     <a href="https://www.copocoshoney.com" target="_blank" rel="noopener noreferrer">
