Add Order On-line button

--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -126,6 +126,9 @@
           <div class="overlay-text-ul">
             <h2>Shop</h2>
           </div>
+          <div class="overlay-text-ll">
+            <a class="learn-more" href="https://www.copocoshoney.com/product/turmeric-ginger-creamed-honey-5-5oz-jar/1159" target="_blank" rel="noopener noreferrer">Order On-line</a>
+          </div>
         </div>
       </div>
       <div class="row row-cols-1 row-cols-sm-2 g-3">
@@ -246,6 +249,16 @@
                 </tr>
                 <tr>
                   <td>
+                    <a href="https://www.copocoshoney.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/Copocos.jpg" class="img-fluid" width=30%>
+                    </a>
+                  </td>
+                  <td>
+                    2020 N College Ave, Fort Collins, CO
+                  </td>
+                </tr>
+                <tr>
+                  <td>
                     <a href="https://thecupboard.net" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/new-cupboard-logo.png" class="img-fluid" width=40%>
                     </a>
@@ -314,29 +327,6 @@
                   </td>
                 </tr>
               </table>
-            </div>
-          </div>
-          <br>
-          <div class="card">
-            <div class="card-header text-center">Shop & On-line Orders</div>
-            <div class="card-body text-center">
-              <table class="logo-table">
-                <tr>
-                  <td>
-                    <a href="https://www.copocoshoney.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/Copocos.jpg" class="img-fluid" width=30%>
-                    </a>
-                  </td>
-                  <td>
-                    2020 N College Ave, Fort Collins, CO
-                  </td>
-                </tr>
-              </table>
-            </div>
-            <div class="card-footer text-center">
-              <a class="learn-more" href="mailto:susan@queensofgoodness.com?
-                subject=I'm interested in becoming a vendor?
-                body=Can you contact me with information on how to become a vendor">Become a Vendor</a>
             </div>
           </div>
         </div>
