Add order online, secret garden cafe, complete logos

--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -127,7 +127,7 @@
             <h2>Shop</h2>
           </div>
           <div class="overlay-text-ll">
-            <a class="learn-more" href="https://www.copocoshoney.com/product/turmeric-ginger-creamed-honey-5-5oz-jar/1159" target="_blank" rel="noopener noreferrer">Order On-line</a>
+            <a class="learn-more" href="https://www.copocoshoney.com/product/turmeric-ginger-creamed-honey-5-5oz-jar/1159" target="_blank" rel="noopener noreferrer">ORDER ONLINE</a>
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
                 <tr>
                   <td>
                     <a href="https://www.facebook.com/countrycharmstore/" target="_blank" rel="noopener noreferrer">
-                      <h4>Country Charm</h4>
+                      <img src="static/img/countrycharm.jpg" class="img-fluid" width=33%>
                     </a>
                   </td>
                   <td>
@@ -175,6 +175,16 @@
                   </td>
                   <td>
                     524 E Main St, Riverton, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.hbcafeandjuicery.com" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/HB.jpg" class="img-fluid" width=20%>
+                    </a>
+                  </td>
+                  <td>
+                    165 E Broadway, Jackson Hole, WY
                   </td>
                 </tr>
                 <tr>
@@ -199,6 +209,36 @@
                 </tr>
                 <tr>
                   <td>
+                    <a href="https://www.operahousestore.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/OperaHouse.webp" class="img-fluid" width=30%>
+                    </a>
+                  </td>
+                  <td>
+                    801 S Main St, Kemmerer, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.mountain-fresh-produce.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/MountainFresh.webp" class="img-fluid" width=30%>
+                    </a>
+                  </td>
+                  <td>
+                    461 S Pine St,<br> Pinedale, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.pearlonbridge.com" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/luckystamp.png" class="img-fluid" width=30%>
+                    </a>
+                  </td>
+                  <td>
+                    100 N 1st St,<br> Saratoga, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
                     <a href="https://matt-egging.wixsite.com/manchesterstcoffee" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/ManChesterSheridanFNTLS.avif" class="img-fluid" width=40%>
                     </a>
@@ -219,28 +259,8 @@
                 </tr>
                 <tr>
                   <td>
-                    <a href="https://www.hbcafeandjuicery.com" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/HB.jpg" class="img-fluid" width=20%>
-                    </a>
-                  </td>
-                  <td>
-                    165 E Broadway, Jackson Hole, WY
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <a href="https://www.operahousestore.com/" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/OperaHouse.webp" class="img-fluid" width=30%>
-                    </a>
-                  </td>
-                  <td>
-                    801 S Main St, Kemmerer, WY
-                  </td>
-                </tr>
-                <tr>
-                  <td>
                     <a href="https://www.facebook.com/p/Natures-Corner-100063679985266/" target="_blank" rel="noopener noreferrer">
-                      <h4>Nature's Corner</h4>
+                      <img src="static/img/naturescorner.jpg" class="img-fluid" width=30%>
                     </a>
                   </td>
                   <td>
@@ -282,15 +302,15 @@
           </div>
         </div>
         <div class="col">
-          <div class="card tg-card">
-            <div class="card-header text-center">Shop & Barista Drinks</div>
+          <div class="card lt-card">
+            <div class="card-header text-center">Get a Golden Milk</div>
             <div class="card-body text-center">
               <table class="logo-table">
                 <tr>
                   <tr>
                     <td>
                       <a href="https://www.facebook.com/p/Blue-and-White-Tea-Co-LLC-61582355155487/" target="_blank" rel="noopener noreferrer">
-                        <img src="static/img/BlueandWhite-02.avif" class="img-fluid" width=40%>
+                        <img src="static/img/BlueandWhite-02.avif" class="img-fluid" width=30%>
                       </a>
                     </td>
                     <td>
@@ -298,8 +318,8 @@
                     </td>
                   </tr>
                   <td>
-                    <a href="https://www.mountain-fresh-produce.com/" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/MountainFresh.webp" class="img-fluid" width=40%>
+                    <a href="https://www.mountain-fresh-produce.com/cafe" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/scg+logo.webp" class="img-fluid" width=30%>
                     </a>
                   </td>
                   <td>
@@ -308,8 +328,8 @@
                 </tr>
                 <tr>
                   <td>
-                    <a href="https://www.pearlonbridge.com" target="_blank" rel="noopener noreferrer">
-                      <h4>The Lucky Pearl</h4>
+                    <a href="https://www.saratogasandwichcompany.com/" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/ssco-type-only-logo.png" class="img-fluid" width=90%>
                     </a>
                   </td>
                   <td>
@@ -319,7 +339,7 @@
                 <tr>
                   <td>
                     <a href="https://broadwaybakery.net" target="_blank" rel="noopener noreferrer">
-                      <h4>Broadway Bakery</h4>
+                      <img src="static/img/broadwaybakery.webp" class="img-fluid" width=40%>
                     </a>
                   </td>
                   <td>
