Fix + in url, add order online to products page

--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -127,6 +127,9 @@
           <div class="overlay-text-ul">
             <h2>Products</h2>
           </div>
+          <div class="overlay-text-ll">
+            <a class="learn-more" href="https://www.copocoshoney.com/product/turmeric-ginger-creamed-honey-5-5oz-jar/1159" target="_blank" rel="noopener noreferrer">ORDER ONLINE</a>
+          </div>
         </div>
       </div>
       <div class="row row-cols-1 row-cols-md-2 g-3">
