--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -319,7 +319,7 @@
                   </tr>
                   <td>
                     <a href="https://www.mountain-fresh-produce.com/cafe" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/scg+logo.webp" class="img-fluid" width=30%>
+                      <img src="static/img/scg%2blogo.webp" class="img-fluid" width=30%>
                     </a>
                   </td>
                   <td>
