h4 for drink/food ideas

--- a/queensofgoodness/brochure.html
+++ b/queensofgoodness/brochure.html
@@ -95,13 +95,13 @@
         <div class="card bl-card">
           <div class="card-header text-center">Serving Suggestions</div>
           <div class="card-body">
-            <p class="card-text">Drink Ideas</p>
+            <h4 class="card-text">Drink Ideas</h4>
             <ul>
               <li><b>Golden Milk</b> - simply swirl a teaspoon or two into your favorite warm milk</li>
               <li>Stir into coffee, tea or hot water</li>
               <li>Make an all-natural, honey-sweetened simple syrup for mocktails and cocktails</li>
             </ul>
-            <p>Food Ideas</p>
+            <h4>Food Ideas</h4>
             <ul>
               <li>Spread on biscuits, bagels, toast, English muffins or waffles</li>
               <li>Savor a spoonful or use as a delicious icing</li>
