--- a/queensofgoodness/bees.html
+++ b/queensofgoodness/bees.html
@@ -227,11 +227,11 @@
       <div class="container-md text-primary d-md-none footer-block">
         <div class="row row-cols-2 g-3">
           <div class="col-8">
-            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
+            <a href="index.html">
+              <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=70% alt=""></p>
+            </a>
             <div class="text-center">
               <p><a class="footer-link" href="#">Contact Us</a></p>
-              <p>2881 Sinks Canyon Rd<br>
-                Lander, WY 82520</p>
             </div>
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
@@ -245,31 +245,34 @@
               <li class="footer-item"><a href="bees.html" class="footer-link-active"><p>Education</p></a></li>
               <li class="footer-item"><a href="shop.html" class="footer-link"><p>Shop</p></a></li>
               <li class="footer-item"><a href="about.html" class="footer-link"><p>About</p></a></li>
-              <li class="footer-item"><a href="faq.html" class="footer-link-active"><p>FAQ</p></a></li>
+              <li class="footer-item"><a href="faq.html" class="footer-link"><p>FAQ</p></a></li>
             </ul>
+          </div>
+        </div>
+        <div class="row row-cols-3 g-3">
+          <div class="col text-center">
+            <p class="footer-item"><a href="terms.html" class="footer-link">Terms of Service</a></p>
+          </div>
+          <div class="col text-center">
+            <p class="footer-item"><a href="disclaimer.html" class="footer-link">Disclaimer</a></p>
+          </div>
+          <div class="col text-center">
+            <p class="footer-item"><a href="privacy.html" class="footer-link">Privacy Policy</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <hr>
+          <div class="col-11">
+            <p class="copyright">&copy; 2024-2026 Queens of Goodness, LLC. All rights reserved.</p>
+          </div>
+          <div class="col-1">
+            <a href="#top"><i class="fas fa-chevron-up footer-link"></i></a>
           </div>
         </div>
       </div>
       <div class="container-lg text-primary d-none d-md-block footer-block">
-        <div class="row text-center">
-          <div class="col">
-            <a href="products.html" class="footer-link">Products</a>
-          </div>
-          <div class="col">
-            <a href="bees.html" class="footer-link-active">Education</a>
-          </div>
-          <div class="col">
-            <a href="shop.html" class="footer-link">Shop</a>
-          </div>
-          <div class="col">
-            <a href="about.html" class="footer-link">About</a>
-          </div>
-          <div class="col">
-            <a href="faq.html" class="footer-link-active">FAQ</a>
-          </div>
-        </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-lg-7">
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
@@ -278,22 +281,38 @@
               <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
             </div>
           </div>
-          <div class="col-md-6 text-center">
-            <p><br><a class="footer-link" href="honey.html">Contact Us</a></p>
-            <p>2881 Sinks Canyon Rd<br>
-              Lander, WY 82520</p>
+          <div class="col-md-4 col-lg-3">
+            <p><a class="footer-link" href="privacy.html">Privacy Policy</a>
+              <br><a class="footer-link" href="terms.html">Terms of Service</a>
+              <br><a class="footer-link" href="disclaimer.html">Disclaimer</a>
+            </p>
+            <p><a class="footer-link" href="#">Contact Us</a><br>
+              2881 Sinks Canyon Rd<br>
+              Lander, WY 82520
+            </p>
+          </div>
+          <div class="col-md-2">
+            <a href="products.html" class="footer-link">Products</a><br>
+            <a href="bees.html" class="footer-link-active">Education</a><br>
+            <a href="shop.html" class="footer-link">Shop</a><br>
+            <a href="about.html" class="footer-link">About</a><br>
+            <a href="faq.html" class="footer-link">FAQ</a>
+          </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="row">
+          <hr>
+          <div class="col-11">
+            <p class="copyright">&copy; 2024-2026 Queens of Goodness, LLC. All rights reserved.</p>
+          </div>
+          <div class="col-1">
+            <a href="#top"><i class="fas fa-chevron-up footer-link"></i></a>
           </div>
         </div>
       </div>
-
-      <!-- Copyright -->
-      <div class="container">
-        <div class="copyright">
-          <p class="text-center">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
-        </div>
-      </div>
     </footer>
-
+ 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
