--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -162,11 +162,21 @@
                 <tr>
                   <td>
                     <a href="https://fremontlocalmarket.org" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/FremontLocalMarketLogo_updated.jpg" class="img-fluid" width=50%>
+                      <img src="static/img/FremontLocalMarketLogo_updated.jpg" class="img-fluid" width=40%>
                     </a>
                   </td>
                   <td>
                     524 E Main St, Riverton, WY
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://eatwyoming.com" target="_blank" rel="noopener noreferrer">
+                      <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=20%>
+                    </a>
+                  </td>
+                  <td>
+                    866 CY Ave, Casper, WY
                   </td>
                 </tr>
                 <tr>
@@ -212,7 +222,7 @@
                 <tr>
                   <td>
                     <a href="https://www.mountain-fresh-produce.com/" target="_blank" rel="noopener noreferrer">
-                      <img src="static/img/MountainFresh.webp" class="img-fluid" width=30%>
+                      <img src="static/img/MountainFresh.webp" class="img-fluid" width=20%>
                     </a>
                   </td>
                   <td>
@@ -356,9 +366,10 @@
               <p><a class="footer-link" href="#">Contact Us</a></p>
             </div>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-4">
@@ -398,9 +409,10 @@
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-md-4 col-lg-3">
