Open new tab for social links

--- a/queensofgoodness/terms.html
+++ b/queensofgoodness/terms.html
@@ -143,9 +143,10 @@
               <p><a class="footer-link" href="#">Contact Us</a></p>
             </div>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-4">
@@ -185,9 +186,10 @@
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-md-4 col-lg-3">
