--- a/queensofgoodness/disclaimer.html
+++ b/queensofgoodness/disclaimer.html
@@ -128,7 +128,7 @@
         <li><h4>Handmade & Natural Variations</h4>
           <p>Because our products are crafted by hand and made with natural ingredients, please note:</p>
 
-          <p>Unique Characteristics: Small variations in color, texture, or appearance are a mark of the artisanal process and do not constitute a defect.</p>
+          <p>Unique Characteristics: Small variations in color, taste, texture, or appearance are a mark of the artisanal process and the pure natural ingredients and do not constitute a defect.</p>
 
           <p>Sizing/Weight: All stated weights and measurements are approximate.</p></li>
 
@@ -151,9 +151,10 @@
               <p><a class="footer-link" href="#">Contact Us</a></p>
             </div>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-4">
@@ -193,9 +194,10 @@
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-md-4 col-lg-3">
