--- a/queensofgoodness/faq.html
+++ b/queensofgoodness/faq.html
@@ -125,8 +125,8 @@
               </h2>
               <div id="faq0" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
-                  Our most popular blends, Turmeric Ginger and Elderberry are available through one
-                  of our wholesale vendors - use the Order Online button on the <a href="shop.html">Shop</a>page
+                  Our most popular blends, Turmeric Ginger and Elderberry, are available through one
+                  of our wholesale vendors - use the Order Online button on the <a href="shop.html">Shop</a> page
                   to place an order through their E-commerce channel. We will be launching an online
                   store later this year.
                 </div>
@@ -260,9 +260,10 @@
               <p><a class="footer-link" href="#">Contact Us</a></p>
             </div>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-4">
@@ -302,9 +303,10 @@
             <p class="mb-4 text-center d-none d-lg-none d-md-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=65% alt=""></p>
             <p class="mb-4 text-center d-none d-md-none d-lg-block"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon"></a>
-              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon"></a>
-              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon"></a>
+              <a href="https://www.facebook.com/profile.php?id=61556597102293"><img src="https://queensofgoodness.com/static/img/Facebook-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://instagram.com/QueensofGoodness" width=48><img src="https://queensofgoodness.com/static/img/Instagram-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://tiktok.com/@queensofgoodness" width=48><img src="https://queensofgoodness.com/static/img/Tiktok.webp" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
+              <a href="https://x.com/goodnessqueens" width=48><img src="https://queensofgoodness.com/static/img/X-48x48.png" class="social-icon" target="_blank" rel="noopener noreferrer"></a>
             </div>
           </div>
           <div class="col-md-4 col-lg-3">
